[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Juan Martinez <martinezalonsojn@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.6.11"
chrono = "0.4.24"
config = "0.13.3"
hyper = "0.14.25"
serde = { version = "1.0.157", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.14"
