[package]
name = "zero2prod"
version = "0.2.0"
edition = "2021"
authors = ["Juan Martinez <martinezalonsojn@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.6.11"
chrono = "0.4.24"
config = "0.13.3"
hyper = "0.14.25"
serde = { version = "1.0.157", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
regex = { version = "1", features = ["unicode-case"] }
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing-subscriber = { version = "0.3.0", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.0"
tracing = { version = "0.1.0", features = ["attributes"] }
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.14"
